support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_apply_nargs.i
%module xxx

%typemap(in) (char *str, int len) {
}

%apply (char *str, int len) { int x };
